--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="generic.html">About us</a></li>
+								<li><a href="elements.html">Syllabus</a></li>
+								<li><a href="#">Events</a></li>
+								<li><a href="#">Contacts</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
